@@ -8,12 +8,12 @@ import gov.nasa.jpl.aerie.constraints.tree.And;
 import gov.nasa.jpl.aerie.constraints.tree.Expression;
 import gov.nasa.jpl.aerie.constraints.tree.WindowsWrapperExpression;
 import gov.nasa.jpl.aerie.merlin.driver.ActivityDirectiveId;
+import gov.nasa.jpl.aerie.merlin.driver.ActivityInstanceId;
 import gov.nasa.jpl.aerie.merlin.protocol.model.SchedulerModel;
 import gov.nasa.jpl.aerie.merlin.protocol.types.Duration;
 import gov.nasa.jpl.aerie.scheduler.conflicts.Conflict;
 import gov.nasa.jpl.aerie.scheduler.model.Plan;
 import gov.nasa.jpl.aerie.scheduler.model.PlanningHorizon;
-import gov.nasa.jpl.aerie.scheduler.model.SchedulingActivityDirectiveId;
 import org.apache.commons.collections4.BidiMap;
 
 import java.util.LinkedList;
@@ -219,11 +219,11 @@ public class Goal {
       goal.shouldRollbackIfUnsatisfied = this.shouldRollbackIfUnsatisfied;
 
       goal.resourceConstraints = null;
-      if (this.resourceConstraints.size() > 0) {
+      if (!this.resourceConstraints.isEmpty()) {
         if (this.resourceConstraints.size() > 1) {
           goal.resourceConstraints = new And(resourceConstraints);
         } else {
-          goal.resourceConstraints = resourceConstraints.get(0);
+          goal.resourceConstraints = resourceConstraints.getFirst();
         }
       }
 
@@ -297,7 +297,6 @@ public class Goal {
   public java.util.Collection<Conflict> getConflicts(
       Plan plan,
       final SimulationResults simulationResults,
-      final Optional<BidiMap<SchedulingActivityDirectiveId, ActivityDirectiveId>> mapSchedulingIdsToActivityIds,
       final EvaluationEnvironment evaluationEnvironment,
       final SchedulerModel schedulerModel
       ) {
